feat: added admin create event service and controller functions but not showing up on swagger?
