# server/src/data-layer/services/AdminService.ts
@@ -1,6 +1,9 @@
 import type { User } from 'data-layer/models/User'
 import { UserService } from './UserService' // 假设你的 UserService 在这里
 import {UserCreationParams} from 'data-layer/services/UserService' 
+import {EventService} from 'data-layer/services/EventService'
+import type { Event, UpdateEventPackage } from 'data-layer/models/Event'
+
 
 export class AdminService {
 
@@ -72,4 +75,35 @@ export class AdminService {
     )
     return userToDelete
   }
+
+  async adminAddEvent(
+    requestingUserId: string,
+    eventId: string,
+    eventTitle: string, 
+    eventDescription: string,
+    eventDate: string,  
+    eventLink: string,
+  ): Promise<Event | null> {
+    const eventService = new EventService()
+    const userService = new UserService()
+    const requestingUser = await userService.getUser(requestingUserId)
+    if (!requestingUser || requestingUser.role !== 'admin') {
+      console.log(`Requesting user - ${requestingUserId} not found`)
+      return null
+    }
+    const EventCreationParams = {
+      id: eventId,
+      title: eventTitle,
+      description: eventDescription,
+      date: eventDate,
+      link: eventLink,
+    }
+    const newEvent = await eventService.createEvent(EventCreationParams)
+    if (!newEvent) {
+      console.log('Event failed on creation')
+      return null
+    }
+    return newEvent
+  }
+
 }
