# server/src/service-layer/controllers/AdminController/AdminController.ts
@@ -13,6 +13,8 @@ import {
   UserService,
 } from '../../../data-layer/services/UserService'
 import { AdminService } from '../../../data-layer/services/AdminService'
+import {type EventCreationParams, EventService} from '../../../data-layer/services/EventService'
+import {Event, UpdateEventPackage} from 'data-layer/models/Event'
 
 @Route('admin')
 export class AdminController extends Controller {
@@ -24,11 +26,11 @@ export class AdminController extends Controller {
   ): Promise<User> {
     const requestingUser = await new UserService().getUser(requestingUserId)
     if (!requestingUser) {
-      this.setStatus(400) // Bad Request if requesting user not found
+      this.setStatus(400) 
       return null
     }
     if (requestingUser.role !== 'admin') {
-      this.setStatus(403) // Forbidden if requesting user is not an admin
+      this.setStatus(403) 
       return null
     }
     this.setStatus(201)
@@ -46,9 +48,28 @@ export class AdminController extends Controller {
       userToDeleteId,
     )
     if (!deletedUser) {
-      this.setStatus(400) // Bad Request if user not found or not deleted
+      this.setStatus(400) 
       return null
     }
     return deletedUser
+  }
+
+  @SuccessResponse('201', 'Created') 
+  @Post('create-event')
+  public async adminCreateEvent(
+    @Query() requestingUserId: string,
+    @Body() requestBody: EventCreationParams,
+  ): Promise<Event> {
+    const requestingUser = await new UserService().getUser(requestingUserId)
+    if (!requestingUser) {
+      this.setStatus(400) 
+      return null
+    }
+    if (requestingUser.role !== 'admin') {
+      this.setStatus(403) 
+      return null
+    }
+    this.setStatus(201)
+    return new EventService().createEvent(requestBody)
   }
 }
